# flysystem

./: Cargo.toml  README.md
src/: contents.rs  lib.rs  trait_object_hackyness.rs
src/adapters/: local.rs  memory.rs  mod.rs  s3.rs
