[package]
license = "MIT"
edition = "2021"
version = "0.2.1"
name = "flysystem"
readme = "README.md"
categories = ["filesystem", "asynchronous"]
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/m1guelpf/flysystem"
description = "A filesystem abstraction layer for Rust."
keywords = ["filesystem", "asynchronous", "storage", "storage-abstraction"]


[dependencies]
url = "2.5.4"
mime = "0.3.17"
sha256 = "1.5.0"
futures = "0.3.31"
thiserror = "2.0.6"
mime_guess = "2.0.5"
async-trait = "0.1.83"
tokio = { version = "1.42.0", optional = true }
aws-types = { version = "1.3.3", optional = true }
async-recursion = { version = "1.1.1", optional = true }
aws-smithy-types = { version = "1.2.9", optional = true }
aws-smithy-runtime-api = { version = "1.7.3", optional = true }
aws-sdk-s3 = { version = "1.65.0", features = [
    "behavior-version-latest",
], optional = true }


[features]
default = ["local"]
local = ["dep:async-recursion", "dep:tokio", "tokio/fs"]
s3 = [
    "dep:aws-sdk-s3",
    "dep:aws-types",
    "dep:aws-smithy-runtime-api",
    "dep:aws-smithy-types",
]

[dev-dependencies]
tokio = { version = "1.35.0", features = ["rt-multi-thread", "rt", "macros"] }
